tests/testdata/negative/slice_oob.go
package main
func main() {
  s := []int{1, 2};
  fmt.Println(s[5]);
}
